--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@neondatabase/serverless": "^0.10.4",
-    "@prisma/client": "^6.18.0",
+    "@prisma/client": "5.19.1",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
@@ -95,7 +95,7 @@
     "openai": "^6.8.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "prisma": "^6.18.0",
+    "prisma": "5.19.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
